--- a/src/app/components/football-fields/create/create.component.html
+++ b/src/app/components/football-fields/create/create.component.html
@@ -8,6 +8,6 @@
     <input type="time" name="open_from" id="open_from" class="form-control" />
     <label for="open_to" class="badge badge-secondary">Open To:</label>
     <input type="time" name="to" id="open_to" class="form-control" />
-    <button type="submit" class="btn btn-info">Create</button>
+    <button type="submit" class="btn btn-info">Create Field</button>
   </form>
 </div>
