--- a/src/app/components/football-fields/all/all.component.css
+++ b/src/app/components/football-fields/all/all.component.css
@@ -1,4 +1,9 @@
-
-.container{
-    min-height: 330px;
+.container {
+  min-height: 330px;
+}
+li {
+  list-style: none;
+}
+button {
+  margin-right: 0.3rem;
 }
