--- a/src/app/components/football-fields/create/create.component.html
+++ b/src/app/components/football-fields/create/create.component.html
@@ -1,13 +1,48 @@
 <div class="container">
   <h2>Create Football Field</h2>
-  <form action="" class="form-group">
-    <input type="text" placeholder="Field Name" class="form-control" />
-    <input type="text" placeholder="Field Address" class="form-control" />
-    <input type="text" placeholder="Telephone" class="form-control" />
+  <form
+    action=""
+    class="form-group"
+    #createForm="ngForm"
+    (submit)="create(createForm)"
+  >
+    <input
+      type="text"
+      placeholder="Field Name"
+      class="form-control"
+      [(ngModel)]="name"
+      name="fieldName"
+    />
+    <input
+      type="text"
+      placeholder="Field Address"
+      class="form-control"
+      [(ngModel)]="address"
+      name="fieldAddress"
+    />
+    <input
+      type="text"
+      placeholder="Telephone"
+      class="form-control"
+      [(ngModel)]="tel"
+      name="fieldTel"
+    />
     <label for="open_from" class="badge badge-secondary">Open From:</label>
-    <input type="time" name="open_from" id="open_from" class="form-control" />
+    <input
+      type="time"
+      name="open_from"
+      id="open_from"
+      class="form-control"
+      [(ngModel)]="openFrom"
+    />
     <label for="open_to" class="badge badge-secondary">Open To:</label>
-    <input type="time" name="to" id="open_to" class="form-control" />
+    <input
+      type="time"
+      name="to"
+      id="open_to"
+      class="form-control"
+      [(ngModel)]="openTo"
+    />
     <button type="submit" class="btn btn-info">Create</button>
   </form>
 </div>
