--- a/src/app/components/football-fields/edit/edit.component.html
+++ b/src/app/components/football-fields/edit/edit.component.html
@@ -1,3 +1,14 @@
 <div class="container">
-  <p>edit works</p>
+  <h2>Edit</h2>
+  <div *ngIf="fields">
+    <div class="roW">
+      <div class="col-lg-6">
+        <ul>
+          <li *ngFor="let field of fields">
+            <h3>{{ field.name }}</h3>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </div>
