--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -1,16 +1,34 @@
 <section class="loginSection">
   <div class="container">
-   <div class="row">
-     <div class="col-lg-12 d-flex justify-content-center align-items-center container h100">
-        <form action="" #loginForm='ngForm' (submit)='login(loginForm)' class="form-group login-form  justify-content-center ">
+    <div class="row">
+      <div
+        class="col-lg-12 d-flex justify-content-center align-items-center container h100"
+      >
+        <form
+          action=""
+          #loginForm="ngForm"
+          (submit)="login(loginForm)"
+          class="form-group login-form  justify-content-center "
+        >
           <h2>Login</h2>
-            <input type="text" [(ngModel)]='username' name="username" placeholder="Username" class="form-control">
-            <input type="password" [(ngModel)]='password' name="password" placeholder="Password" class="form-control">
-            <button type="Login" class="btn btn-dark">Login</button>
-          </form>
-     </div>
-   </div>
-    <p class="text-danger">{{error}}</p>
+          <input
+            type="text"
+            [(ngModel)]="username"
+            name="username"
+            placeholder="Username"
+            class="form-control"
+          />
+          <input
+            type="password"
+            [(ngModel)]="password"
+            name="password"
+            placeholder="Password"
+            class="form-control"
+          />
+          <button type="Login" class="btn btn-dark">Login</button>
+        </form>
+      </div>
+    </div>
+    <p class="text-danger">{{ error }}</p>
   </div>
-
 </section>
