--- a/src/app/components/football-fields/edit/edit.component.html
+++ b/src/app/components/football-fields/edit/edit.component.html
@@ -1,13 +1,9 @@
 <div class="container">
   <h2>Edit</h2>
-  <div *ngIf="fields">
+  <div *ngIf="field">
     <div class="roW">
       <div class="col-lg-6">
-        <ul>
-          <li *ngFor="let field of fields">
-            <h3>{{ field.name }}</h3>
-          </li>
-        </ul>
+        <h3>{{ field.name }}</h3>
       </div>
     </div>
   </div>
