--- a/src/app/components/layout/navigation/navigation.component.html
+++ b/src/app/components/layout/navigation/navigation.component.html
@@ -1,13 +1,34 @@
 <nav class="navbar navbar-expand-sm  nav mb-4 navbar-dark bg-dark">
-  <div class="container"><a class="navbar-brand" id="logo" routerLink="/">SoccerFields</a><button class="navbar-toggler"
-      type="button" data-toggle="collapse" data-target="#mobile-nav"><span class="navbar-toggler-icon"></span></button>
+  <div class="container">
+    <a class="navbar-brand" id="logo" routerLink="/">SoccerFields</a
+    ><button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#mobile-nav"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
     <div class="collapse navbar-collapse" id="mobile-nav">
       <ul class="navbar-nav mr-auto"></ul>
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item"><a class="nav-link" routerLink="/football-fields/create">Create Field</a></li>
-        <li class="nav-item"><a class="nav-link" routerLink="/football-fields/edit">Edit Field</a></li>
-        <li class="nav-item"><a class="nav-link" routerLink="/football-fields/all">All Fields</a></li>
-        <li class="nav-item"><a class="nav-link" routerLink="/admin/reservations">All Reservations</a></li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/football-fields/create"
+            >Create Field</a
+          >
+        </li>
+        <!-- TODO Players router link -->
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/football-fields/edit">Players</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/football-fields/all">All Fields</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/admin/reservations"
+            >All Reservations</a
+          >
+        </li>
       </ul>
     </div>
   </div>
