--- a/src/app/components/football-fields/all/all.component.html
+++ b/src/app/components/football-fields/all/all.component.html
@@ -1,8 +1,8 @@
 <div class="container">
-  <h2>All</h2>
   <div *ngIf="fields">
     <div class="row">
       <div class="col-lg-6">
+        <!-- <h2>Find Field:</h2> -->
         <ul>
           <li *ngFor="let field of fields" class="mb-3">
             <h3>{{ field.name }}</h3>
