--- a/src/app/components/layout/navigation/navigation.component.html
+++ b/src/app/components/layout/navigation/navigation.component.html
@@ -12,22 +12,15 @@
     <div class="collapse navbar-collapse" id="mobile-nav">
       <ul class="navbar-nav mr-auto"></ul>
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/football-fields/create"
-            >Create Field</a
-          >
-        </li>
         <!-- TODO Players router link -->
         <li class="nav-item">
-          <a class="nav-link" routerLink="/football-fields/edit">Players</a>
+          <a class="nav-link" routerLink="/players/all">Players</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/football-fields/all">All Fields</a>
+          <a class="nav-link" routerLink="/football-fields/all">Fields</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/admin/reservations"
-            >All Reservations</a
-          >
+          <a class="nav-link" routerLink="/admin/reservations">Reservations</a>
         </li>
       </ul>
     </div>
