--- a/src/app/components/players/create-player/create-player.component.css
+++ b/src/app/components/players/create-player/create-player.component.css
@@ -1,3 +1,17 @@
 .container {
   min-height: 330px;
 }
+input {
+  margin-bottom: 0.3rem;
+}
+label {
+  margin-bottom: 0.1rem;
+  margin-top: 0.5rem;
+  font-size: 0.9rem;
+}
+form {
+  width: 250px;
+}
+input.ng-invalid.ng-touched {
+  border: 1px solid red;
+}
