fix: id problems without delete

--- a/src/app/components/football-fields/all/all.component.html
+++ b/src/app/components/football-fields/all/all.component.html
@@ -15,14 +15,14 @@
               </div>
             </div>
             <button
-              routerLink="/football-fields/book/id:{{ field._id }}"
+              routerLink="/football-fields/book/{{ field._id }}"
               class="btn btn-primary"
             >
               Book now
             </button>
             <button
               *ngIf="auth.isAdmin()"
-              routerLink="/football-fields/edit/id:{{ field._id }}"
+              routerLink="/football-fields/edit/{{ field._id }}"
               class="btn btn-success"
             >
               Edit!
